--- a/Web_HP/Web_HP/Views/Home/Index.cshtml
+++ b/Web_HP/Web_HP/Views/Home/Index.cshtml
@@ -21,11 +21,11 @@
     </div>
     <ul class="nav navbar-nav">
       <li class="active"><a href="#">Home</a></li>
-      <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Chansons <span class="caret"></span></a>
+      <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="Chansons.cshtml">Chansons <span class="caret"></span></a>
         <ul class="dropdown-menu">
           <li><a href="Chansons.cshtml">Chansons</a></li>
           <li><a href="Chanteurs.cshtml">Chanteurs</a></li>
-          <li><a href="Albums.cshtml">Albums</a></li>
+          <li><a href="#">Albums</a></li>
         </ul>
       </li>
       <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Medias <span class="caret"></span></a>
