--- a/Web_HP/Web_HP/Views/Home/Index.cshtml
+++ b/Web_HP/Web_HP/Views/Home/Index.cshtml
@@ -12,7 +12,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </head>
-<body>
+<body data-bs-spy="scroll" data-bs-target=".navbar" data-bs-offset="50">
 
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
