site web modification

--- a/Web_HP/Web_HP/Views/Home/Index.cshtml
+++ b/Web_HP/Web_HP/Views/Home/Index.cshtml
@@ -17,15 +17,15 @@
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="#">WebSiteName</a>
+                <a class="navbar-brand" href="Home/Index">Xilo</a>
     </div>
     <ul class="nav navbar-nav">
       <li class="active"><a href="#">Home</a></li>
       <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="Chansons.cshtml">Chansons <span class="caret"></span></a>
         <ul class="dropdown-menu">
-          <li><a href="Chansons.cshtml">Chansons</a></li>
-          <li><a href="Chanteurs.cshtml">Chanteurs</a></li>
-          <li><a href="#">Albums</a></li>
+          <li><a href="Home/Chansons">Chansons</a></li>
+           <li><a href="Home/Chanteurs">Chanteurs</a></li>
+           <li><a href="Home/Albums">Albums</a></li>
         </ul>
       </li>
       <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Medias <span class="caret"></span></a>
