Ajouter les pages user login

--- a/Web_HP/Web_HP/Views/Home/Index.cshtml
+++ b/Web_HP/Web_HP/Views/Home/Index.cshtml
@@ -1,6 +1,9 @@
 ﻿@{
     ViewData["Title"] = "Page accueil";
 }
+@{
+    Layout = "_Layout";
+}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -11,34 +14,9 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <script src="https://kit.fontawesome.com/47a8f3b46f.js" crossorigin="anonymous"></script>
 </head>
-<body data-bs-spy="scroll" data-bs-target=".navbar" data-bs-offset="50">
-
-<nav class="navbar navbar-inverse">
-  <div class="container-fluid">
-    <div class="navbar-header">
-                <a class="navbar-brand" href="Home/Index">Xilo</a>
-    </div>
-    <ul class="nav navbar-nav">
-      <li class="active"><a href="#">Home</a></li>
-      <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="Chansons.cshtml">Chansons <span class="caret"></span></a>
-        <ul class="dropdown-menu">
-          <li><a href="Home/Chansons">Chansons</a></li>
-           <li><a href="Home/Chanteurs">Chanteurs</a></li>
-           <li><a href="Home/Albums">Albums</a></li>
-        </ul>
-      </li>
-      <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Medias <span class="caret"></span></a>
-        <ul class="dropdown-menu">
-          <li><a href="#">Movies</a></li>
-          <li><a href="#">Series</a></li>
-          <li><a href="#">Acteurs</a></li>
-          <li><a href="#">Directeurs</a></li>
-        </ul>
-      </li>
-    </ul>
-  </div>
-</nav>
+<body>
   
 <div class="container">
     <div class="text-center">
