--- a/Web_HP/Web_HP/Views/Home/Register.cshtml
+++ b/Web_HP/Web_HP/Views/Home/Register.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewData["Title"] = "Login";
+    ViewData["Title"] = "Register";
 }
 @{
     Layout = "LayoutUser";
@@ -26,10 +26,10 @@
             margin-bottom: 10px; /* Add some space below the text */
         }
 
-        .create-account-text a {
-            color: #fff; /* Set link color to white */
-            text-decoration: underline; /* Add underline to links */
-        }
+            .create-account-text a {
+                color: #fff; /* Set link color to white */
+                text-decoration: underline; /* Add underline to links */
+            }
     </style>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
@@ -44,12 +44,15 @@
                             <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
                         </div>
                         <div class="input-group mb-3">
+                            <span class="input-group-text" id="inputGroup-sizing-default">Adresse mail</span>
+                            <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+                        </div>
+                        <div class="input-group mb-3">
                             <span class="input-group-text" id="inputGroup-sizing-default">Mot de passe</span>
                             <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
                         </div>
                         <div class="create-account-text">
-                            Si vous n'avez pas de compte, veuillez
-                            <a href="Register">cliquer ici</a>.
+                            Si vous avez déjà un compte, <a href="Login">cliquer ici</a>.
                         </div>
                         <button type="submit" class="btn btn-info">Valider</button>
                     </form>
@@ -91,5 +94,3 @@
     </script>
 </body>
 </html>
-
-
