Brain exploding login

--- a/Web_HP/Web_HP/Views/Home/Chanteurs.cshtml
+++ b/Web_HP/Web_HP/Views/Home/Chanteurs.cshtml
@@ -24,7 +24,7 @@
 <script>
     $(document).ready(function() {
         // Make HTTP request to API endpoint
-        $.get("api/chanteurs", function(chanteurs) {
+        $.get("api/Chanteurs", function(chanteurs) {
             // Iterate through chanteurs and render in cards
             chanteurs.forEach(function(chanteur) {
                 var chanteurCard = `
