--- a/Web_HP/Web_HP/Views/Home/Register.cshtml
+++ b/Web_HP/Web_HP/Views/Home/Register.cshtml
@@ -49,7 +49,7 @@
                         </div>
                         <div class="input-group mb-3">
                             <span class="input-group-text" id="inputGroup-sizing-default">Mot de passe</span>
-                            <input type="text" class="form-control" id="MotDePasse" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+                            <input type="password" class="form-control" id="MotDePasse" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
                         </div>
                         <div class="create-account-text">
                             Si vous avez déjà un compte, <a href="Login">cliquer ici</a>.
@@ -77,13 +77,13 @@
 
                 $.ajax({
                     type: 'POST',
-                    url: '/api/Utilisateur/Register', // API endpoint
+                    url: '/api/Utilisateurs',
                     data: JSON.stringify(formData),
                     contentType: 'application/json',
                     success: function (data) {
                         // Inscription réussie
                         $('#message').text('Inscription réussie. Bienvenue, ' + data.NomUser);
-                        window.location.href = '/Home/Index';
+                        window.location.href = 'Home/Index';
                     },
                     error: function (xhr, textStatus, errorThrown) {
                         // Inscription échouée:
