--- a/Web_HP/Web_HP/Views/Shared/_Layout.cshtml
+++ b/Web_HP/Web_HP/Views/Shared/_Layout.cshtml
@@ -44,7 +44,7 @@
                             </div>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="~/Home/Login">
+                            <a class="nav-link" href="~/Login/Index">
                                 <i class="fas fa-user"></i>
                             </a>
                         </li>
