--- a/Web_HP/Web_HP/Views/Home/Home.cshtml
+++ b/Web_HP/Web_HP/Views/Home/Home.cshtml
@@ -1,8 +1,9 @@
 ﻿@{
-    ViewData["Title"] = "Page accueil";
+    ViewData["Title"] = "Home";
 }
+
 @{
-    Layout = "_Layout";
+    Layout = "Layout1";
 }
 
 <!DOCTYPE html>
@@ -61,4 +62,3 @@
     </div>
 </body>
 </html>
-
