--- a/Web_HP/Web_HP/Views/Home/Home.cshtml
+++ b/Web_HP/Web_HP/Views/Home/Home.cshtml
@@ -18,15 +18,20 @@
     <script src="https://kit.fontawesome.com/47a8f3b46f.js" crossorigin="anonymous"></script>
 </head>
 <body>
+    <!-- Carrousel d'images -->
     <div id="carouselExampleIndicators" class="carousel slide">
+        <!-- Indicateurs de position -->
         <ol class="carousel-indicators">
             <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
             <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
         </ol>
+        <!-- Contenu du carrousel -->
         <div class="carousel-inner">
+            <!-- Image active -->
             <div class="item active">
                 <img src="~/NewFolder/movies.jpg" class="d-block w-100" alt="Collection des Movies" data-target-url="Home/Movies">
             </div>
+            <!-- Autres images -->
             <div class="item">
                 <img src="~/NewFolder/albums.jpg" class="d-block w-100" alt="Collection des Albums" data-target-url="Home/Albums">
             </div>
@@ -34,6 +39,7 @@
                 <img src="~/NewFolder/Series.jpg" class="d-block w-100" alt="Collection des Albums" data-target-url="Home/Albums">
             </div>
         </div>
+        <!-- Contrôles de navigation -->
         <a class="left carousel-control" href="#carouselExampleIndicators" role="button" data-slide="prev">
             <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
             <span class="sr-only">Previous</span>
@@ -44,19 +50,23 @@
         </a>
     </div>
 
+    <!-- Script pour rediriger vers l'URL correspondante au clic sur une image -->
     <script>
         $(document).ready(function () {
             $('.carousel-item img').click(function () {
-                // Get the data-target attribute value of the clicked image
+                // Récupérer la valeur de l'attribut data-target de l'image cliquée
                 var targetUrl = $(this).data('target-url');
-                // Redirect the user to the specified URL
+                // Rediriger l'utilisateur vers l'URL spécifiée
                 window.location.href = targetUrl;
             });
         });
     </script>
+    <!-- Contenu principal -->
     <div class="container">
         <div class="text-center">
+            <!-- Titre principal -->
             <h1 class="display-4 font-weight-bold">Bienvenue sur Xilo</h1>
+            <!-- Description -->
             <p class="lead">Découvrez divers genres de chansons, films, séries, albums et bien plus encore.</p>
         </div>
     </div>
