--- a/Web_HP/Web_HP/Views/Login/Index.cshtml
+++ b/Web_HP/Web_HP/Views/Login/Index.cshtml
@@ -12,45 +12,55 @@
 <html>
 <head>
     <title>Login</title>
+     <!-- Styles CSS personnalisés -->
     <style>
         .custom-container {
-            background-color: #2a9d8f; /* Set background color to teal */
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-            margin: 20px auto;
-            text-align: center;
+            background-color: #2a9d8f; /* Couleur de fond */
+            padding: 20px; /* Espacement intérieur */
+            border-radius: 10px; /* Coins arrondis */
+            box-shadow: 0 4px 8px rgba(0,0,0,0.1); /* Ombre */
+            margin: 20px auto; /* Marge externe */
+            text-align: center; /* Alignement du contenu */
         }
-        /* Style for the French text */
+        
         .create-account-text {
-            color: #fff; /* White text color */
-            font-size: 14px; /* Adjust font size */
-            margin-bottom: 10px; /* Add some space below the text */
+            color: #fff; /* Couleur du texte */
+            font-size: 14px; /* Taille de la police */
+            margin-bottom: 10px; /* Marge inférieure */
         }
 
         .create-account-text a {
-            color: #fff; /* Set link color to white */
-            text-decoration: underline; /* Add underline to links */
+            color: #fff; /* Couleur du lien */
+            text-decoration: underline; /* Soulignement du lien */
         }
     </style>
+    <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
-    <div class="container">
+     <div class="container">
         <div class="row">
             <div class="col-md-6 col-md-offset-3">
                 <div class="custom-container">
+                    <!-- Formulaire de connexion -->
                     <form method="post">
+                        <!-- Champ d'adresse e-mail -->
                         <div class="input-group mb-3">
                             <span class="input-group-text" id="inputGroup-sizing-default">Adresse mail</span>
+                            <!-- Champ d'entrée pour l'adresse e-mail -->
                             @Html.TextBoxFor(m => m.Utilisateur.Email, new { @class = "form-control", aria_label = "Sizing example input", aria_describedby = "inputGroup-sizing-default" })
+                            <!-- Message de validation pour l'adresse e-mail -->
                             @Html.ValidationMessageFor(m => m.Utilisateur.Email)
                         </div>
+                        <!-- Champ de mot de passe -->
                         <div class="input-group mb-3">
                             <span class="input-group-text" id="inputGroup-sizing-default">Mot de passe</span>
+                            <!-- Champ d'entrée pour le mot de passe -->
                             @Html.PasswordFor(m => m.Utilisateur.MDP, new { @class = "form-control", aria_label = "Sizing example input", aria_describedby = "inputGroup-sizing-default" })
+                            <!-- Message de validation pour le mot de passe -->
                             @Html.ValidationMessageFor(m => m.Utilisateur.MDP)
                         </div>
+                        <!-- Bouton de soumission du formulaire -->
                         <input type="submit" value="Se connecter" class="btn btn-info">
                         <br />
                     </form>
@@ -59,6 +69,7 @@
         </div>
     </div>
 
+    <!-- Zone pour afficher les messages -->
     <div id="message"></div>
 </body>
 </html>
